--- a/routes/lang/en.json
+++ b/routes/lang/en.json
@@ -524,12 +524,11 @@
   "app.helpdialog.accessibilityissuewithcourse.link": "Accessibility Issue With Course",
   "app.helpdialog.accessibilityissuewithcourse.text": "Accessibility Issue With Course Text",
   "app.helpdialog.platformissue.link": "Platform Issue",
-  "app.helpdialog.platformissue.text": "To send a request for technical support, please send a message to GD BOX",
+  "app.helpdialog.platformissue.text": "Technical Issue Form",
   "app.helpdialog.complianceissue.link": "Compliance Issue",
   "app.helpdialog.complianceissue.text": "Compliance Issue Text",
   "app.heldialog.businessline.norepresentative": "There is currently no representative for your selected business line",
   "app.heldialog.businessline.representative.helptext": "You can click on your representative's name to send them a message",
-  "app.heldialog.issuewithcourse.support.helptext": "You are unable to get answers to your questions? You can open a support ticket",
-  "app.back": "Back",
-  "app.here": "Here"
+  "app.heldialog.issuewithcourse.support.helptext": "You are unable to get answers to your questions? You can <a class='%{classname}' data-help-dialog-next-view='%{nextview}'> open a support ticket </a>",
+  "app.back": "Back"
 }
