--- a/routes/lang/fr.json
+++ b/routes/lang/fr.json
@@ -1607,12 +1607,11 @@
     "app.helpdialog.accessibilityissuewithcourse.link": "Accessibility Issue With Course",
     "app.helpdialog.accessibilityissuewithcourse.text": "Accessibility Issue With Course Text",
     "app.helpdialog.platformissue.link": "Problème avec la plateforme",
-    "app.helpdialog.platformissue.text": "Texte du problème avec la plateforme",
+    "app.helpdialog.platformissue.text": "Formulaire d'assistance technique",
     "app.helpdialog.complianceissue.link": "Problème de conformité",
     "app.helpdialog.complianceissue.text": "Texte du problème de conformité",
     "app.heldialog.businessline.norepresentative": "Il n'y a actuellement aucun représentant pour la ligne de votre entreprise sélectionnée.",
     "app.heldialog.businessline.representative.helptext": "Vous pouvez cliquer sur le nom de votre représentant pour lui envoyer un message",
-    "app.heldialog.issuewithcourse.support.helptext": "Vous n'obtenez pas de réponses à vos questions ? Vous pouvez ouvrir un billet de support",
-    "app.back": "Retour",
-    "app.here": "Ici"
+    "app.heldialog.issuewithcourse.support.helptext": "Vous n'obtenez pas de réponses à vos questions ? Vous pouvez <a class='%{classname}' data-help-dialog-next-view='%{nextview}'> ouvrir un billet de support </a>",
+    "app.back": "Retour"
 }
